"""Erreur de confirmation d'une suppression d'année scolaire."""


class SchoolYearConfirmationMismatchError(Exception):
    """Signale que le nom saisi ne correspond pas à l'année ciblée."""

