@startuml
title BlaiseConnect - US-003 - Années et périodes scolaires

left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

legend left
|= Couleur |= Couche |
|<#E8F5E9>| Vue React |
|<#FFF3E0>| Contrôleur et services FastAPI |
|<#FFEBEE>| Contrats Pydantic |
|<#E3F2FD>| Modèles SQLAlchemy |
|<#ECEFF1>| Utilitaires |
endlegend

package "VUE - React" #E8F5E9 {
  class "pages/school_years_page.jsx" as SchoolYearsPage {
    - schoolYears
    - isLoading
    - errorMessage
    - currentPage
    - isFormOpen
    - formData
    + loadSchoolYears()
    + handleFormFieldChange(event)
    + handleCreateSubmit(event)
    + handleSchoolYearSelection(id)
    + handlePreviousPage()
    + handleNextPage()
  }

  class "pages/school_year_details_page.jsx" as SchoolYearDetailsPage {
    - schoolYear
    - periods
    - isEditingYear
    - yearEdit
    - periodEdits
    - isYearActionPending
    + loadDetails()
    + handleStartYearEditing()
    + handleYearEditChange(event)
    + handlePeriodEditChange(event)
    + handleYearFormSubmit(event)
    + handleSetCurrentYear()
    + handleCloseCurrentYear()
    + handleOpenDeleteDialog()
    + handleDeleteSchoolYear(event)
    + handleCreateSubmit(event)
  }

  class "services/school_year_service.js" as FrontSchoolYearService {
    + getSchoolYears()
    + getSchoolYear(id)
    + createSchoolYear(data)
    + updateSchoolYear(id, data)
    + updateSchoolYearDetails(id, data)
    + setCurrentSchoolYear(id)
    + closeSchoolYear(id)
    + getReportingPeriods(yearId)
    + createReportingPeriod(yearId, data)
    + updateReportingPeriod(yearId, periodId, data)
    + getSchoolYearDeletionPreview(id)
    + deleteSchoolYear(id, confirmationName)
  }
}

package "CONTROLEUR - FastAPI" #FFF3E0 {
  class "routes/school_years.py" as SchoolYearRoutes {
    + get_school_years(db, admin)
    + get_school_year(id, db, admin)
    + post_school_year(data, db, admin)
    + patch_school_year(id, data, db, admin)
    + patch_school_year_details(id, data, db, admin)
    + post_set_current_school_year(id, db, admin)
    + post_close_school_year(id, db, admin)
    + get_deletion_preview(id, db, admin)
    + delete_school_year(id, confirmation, db, admin)
  }

  class "routes/reporting_periods.py" as ReportingPeriodRoutes {
    + get_reporting_periods(yearId, db, admin)
    + post_reporting_period(yearId, data, db, admin)
    + patch_reporting_period(yearId, periodId, data, db, admin)
  }

  class "services/school_year_service.py" as SchoolYearService {
    + list_school_years(db)
    + get_school_year_by_id(db, id)
    + create_school_year(db, data)
    + update_school_year(db, id, data)
    + update_school_year_details(db, id, data)
    + set_current_school_year(db, id)
    + close_school_year(db, id, adminId)
    + get_school_year_deletion_preview(db, id)
    + delete_open_school_year(db, id, name, adminId)
  }

  class "services/reporting_period_service.py" as ReportingPeriodService {
    + list_reporting_periods(db, yearId)
    + get_reporting_period_by_id(db, id)
    + compute_next_period_start_date(db, yearId)
    + create_reporting_period(db, data)
    + update_reporting_period(db, id, data)
  }
}

package "CONTRATS - Pydantic" #FFEBEE {
  class SchoolYearCreate {
    + name: str
    + start_date: date
    + end_date: date
  }
  class SchoolYearUpdate {
    + name: str
    + start_date: date
    + end_date: date
  }
  class SchoolYearPeriodUpdate {
    + id: UUID
    + name: str
    + end_date: date
  }
  class SchoolYearDetailsUpdate {
    + name: str
    + start_date: date
    + end_date: date
    + periods: list
  }
  class SchoolYearResponse {
    + id: UUID
    + name: str
    + start_date: date
    + end_date: date
    + is_current: bool
    + closed_at: datetime?
    + closed_by_account_id: UUID?
    + created_at: datetime
    + updated_at: datetime
  }
  class SchoolYearDetailsResponse {
    + school_year: SchoolYearResponse
    + periods: list
  }
  class ReportingPeriodCreate {
    + school_year_id: UUID
    + name: str
    + end_date: date
  }
  class ReportingPeriodUpdate {
    + name: str
    + end_date: date
  }
  class ReportingPeriodResponse {
    + id: UUID
    + school_year_id: UUID
    + name: str
    + start_date: date
    + end_date: date
    + created_at: datetime
    + updated_at: datetime
  }
  class SchoolYearDeletionConfirmation {
    + confirmation_name: str
  }
  class SchoolYearDeletionPreview {
    + school_year_id: UUID
    + school_year_name: str
    + reporting_periods: int
    + classes: int
    + student_enrollments: int
    + class_subjects: int
  }
  class SchoolYearDeletionResponse {
    + message: str
    + deleted_counts: dict
  }
}

package "MODELE - SQLAlchemy" #E3F2FD {
  class "models/school_year.py" as SchoolYear {
    + id: UUID
    + name: str
    + start_date: date
    + end_date: date
    + is_current: bool
    + closed_at: datetime?
    + closed_by_account_id: UUID?
    + created_at: datetime
    + updated_at: datetime
  }

  class "models/school_period.py" as SchoolPeriod {
    + id: UUID
    + school_year_id: UUID
    + name: str
    + start_date: date
    + end_date: date
    + created_at: datetime
    + updated_at: datetime
  }
  class "school_year_deletion_audits" as SchoolYearDeletionAudit {
    + id: UUID
    + school_year_id: UUID
    + school_year_name: str
    + deleted_by_account_id: UUID
    + deleted_counts: JSON
    + deleted_at: datetime
  }
}

package "UTILITAIRES - Core" #ECEFF1 {
  class CurrentAdminDependency
  class DatabaseSession
  class SchoolYearNotFoundError
  class SchoolYearAlreadyClosedError
  class SchoolYearPeriodsMismatchError
  class SchoolYearConfirmationMismatchError
  class ReportingPeriodNotFoundError
  class PostgresErrorMessage {
    + extract_postgres_error_message(error)
  }
}

SchoolYearsPage --> FrontSchoolYearService
SchoolYearDetailsPage --> FrontSchoolYearService
FrontSchoolYearService ..> SchoolYearRoutes : HTTP
FrontSchoolYearService ..> ReportingPeriodRoutes : HTTP

SchoolYearRoutes --> SchoolYearService
ReportingPeriodRoutes --> ReportingPeriodService
ReportingPeriodRoutes --> SchoolYearService : vérifie l'année

SchoolYearService --> SchoolYear
SchoolYearService --> SchoolPeriod : mise à jour atomique
ReportingPeriodService --> SchoolPeriod
ReportingPeriodService --> SchoolYearService

SchoolYearRoutes ..> SchoolYearCreate
SchoolYearRoutes ..> SchoolYearUpdate
SchoolYearRoutes ..> SchoolYearDetailsUpdate
SchoolYearRoutes ..> SchoolYearResponse
SchoolYearRoutes ..> SchoolYearDetailsResponse
SchoolYearRoutes ..> SchoolYearDeletionConfirmation
SchoolYearRoutes ..> SchoolYearDeletionPreview
SchoolYearRoutes ..> SchoolYearDeletionResponse
SchoolYearDetailsUpdate *-- SchoolYearPeriodUpdate

ReportingPeriodRoutes ..> ReportingPeriodCreate
ReportingPeriodRoutes ..> ReportingPeriodUpdate
ReportingPeriodRoutes ..> ReportingPeriodResponse
SchoolYearDetailsResponse *-- SchoolYearResponse
SchoolYearDetailsResponse *-- ReportingPeriodResponse

SchoolYear "1" -- "0..*" SchoolPeriod
SchoolYearService ..> SchoolYearDeletionAudit : conserve l'audit
SchoolYearRoutes ..> CurrentAdminDependency
ReportingPeriodRoutes ..> CurrentAdminDependency
SchoolYearService ..> DatabaseSession
ReportingPeriodService ..> DatabaseSession

note bottom of SchoolYearService
update_school_year_details verrouille l'année
et ses périodes avec FOR UPDATE, recalcule
les débuts et effectue un seul commit.
end note

note bottom of SchoolYearDeletionAudit
Suppression autorisée uniquement avant clôture,
après saisie exacte du nom. Les dépendances
sont supprimées dans une transaction unique.
end note

note bottom of SchoolPeriod
Le début n'est jamais saisi manuellement :
début de l'année, puis lendemain de la fin précédente.
Le verrouillage par bulletin validé sera branché
lorsque les tables de bulletins existeront.
end note

@enduml
